--- a/index1.html
+++ b/index1.html
@@ -50,6 +50,25 @@
       </ul>
     </nav>
     <div class="slider"></div>
-    <footer>여기는 풋터입니다. 올라가야 되는데.. </footer>
+    <footer>여기는 풋터입니다. 올라가야 되는데.. 
+      <h3>하단로고</h3>
+      <div class="copyright">
+        <ul class="copy">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="sns">
+        <li><a href="#">트위터</a></li>
+        <li><a href="#">페이스북</a></li>
+        <li><a href="#">인스타그램</a></li>  
+      </div>
+    </footer>
   </body>
 </html>
