--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    여기는 일번 파일입니다.ㅁㅁㅁ
+    여기는 일번 파일입니다.... 
     <h1>dfjdfdklf</h1>
     <nav>
       <ul class="menu">
@@ -68,6 +68,7 @@
         <li><a href="#">트위터</a></li>
         <li><a href="#">페이스북</a></li>
         <li><a href="#">인스타그램</a></li>  
+        <li><a href="#">틱톡</a></li>  
       </div>
     </footer>
   </body>
