--- a/index1.html
+++ b/index1.html
@@ -69,7 +69,9 @@
         <li><a href="#">페이스북</a></li>
         <li><a href="#">인스타그램</a></li>  
         <li><a href="#">틱톡</a></li>  
+        <li><a href="#">네이버라인</a></li>  
       </div>
+네이버라인   </div>
     </footer>
   </body>
 </html>
