--- a/index1.html
+++ b/index1.html
@@ -71,7 +71,7 @@
         <li><a href="#">틱톡</a></li>  
         <li><a href="#">네이버라인</a></li>  
       </div>
-네이버라인   </div>
+   </div>
     </footer>
   </body>
 </html>
